# Thesis

./: .gitignore  README.md
db/: create.sql  model.mwb  model.mwb.bak
doc/: FITthesis.cls  Thesis.tex  color.tex  make.sh  mybibliographyfile.bib  op.txt
doc/charts/: helper.html
doc/diagrams/: umlet_domain.uxf  umlet_use_case.uxf
doc/navigation/: .directory
src/Client/: food_inventory_devel.key.jks
src/Client/client/: build.gradle  proguard-rules.txt
src/Client/client/src/main/: AndroidManifest.xml
src/Client/client/src/main/res/anim/: slide_up_left.xml  slide_up_right.xml
src/Client/client/src/main/res/drawable/: button_fill_background.xml  button_fill_background_pressed.xml  button_undecor.xml  drawer_list_item_bg_normal.xml  food_list_item_button_add_background.xml
src/Client/client/src/main/res/layout/: activity_main.xml  add_imported_food.xml  add_new_food.xml  food_detail.xml  food_detail_image.xml  food_edit.xml  food_list.xml  food_list_fragment.xml  food_list_item.xml  fragment_main.xml  fragment_navigation_drawer.xml  gtin_capture.xml  home.xml  image_edit_item.xml  image_edit_new_item.xml  (+23 more)
src/Client/gradle/wrapper/: gradle-wrapper.properties
src/Prototype/prototype/: build.gradle
src/Prototype/prototype/src/main/: AndroidManifest.xml
src/Server/: CMakeLists.txt  main.cpp
src/Server/Client/: Buffer.cpp  Buffer.hpp  BufferException.cpp  BufferException.hpp  CMakeLists.txt  ClientContext.hpp  ClientThread.cpp  ClientThread.hpp  Context.cpp  Context.hpp
src/Server/Config/: CMakeLists.txt  Configurator.cpp  Configurator.hpp
src/Server/ConnectedClient/: Buffer.cpp  Buffer.hpp  BufferException.hpp  CMakeLists.txt  ClientThread.cpp  ClientThread.hpp  Context.hpp
src/Server/Database/: CMakeLists.txt  MySQLManager.cpp  MySQLManager.hpp
src/Server/Database/DAO/: CMakeLists.txt  CategoryDAOMySQL.cpp  CategoryDAOMySQL.hpp  EditDAOMySQL.cpp  EditDAOMySQL.hpp  FoodDAOMySQL.cpp  FoodDAOMySQL.hpp  ImageDAOMySQL.cpp  ImageDAOMySQL.hpp  InventoryDAOMySQL.cpp  InventoryDAOMySQL.hpp  ReviewDAOMySQL.cpp  ReviewDAOMySQL.hpp  UserDAOMySQL.cpp  UserDAOMySQL.hpp  VendorDAOMySQL.cpp  VendorDAOMySQL.hpp
src/Server/Entity/: CMakeLists.txt  Category.cpp  Category.hpp  Edit.cpp  Edit.hpp  Food.cpp  Food.hpp  Image.cpp  Image.hpp  Inventory.cpp  Inventory.hpp  Review.cpp  Review.hpp  User.cpp  User.hpp  Vendor.cpp  Vendor.hpp
src/Server/Entity/DAO/: CMakeLists.txt  CategoryDAO.hpp  DAOException.cpp  DAOException.hpp  DAOFactory.cpp  DAOFactory.hpp  EditDAO.hpp  FoodDAO.hpp  ImageDAO.hpp  InventoryDAO.hpp  ReviewDAO.hpp  UserDAO.hpp  UserDAOImpl.cpp  UserDAOImpl.hpp  VendorDAO.hpp
src/Server/Handler/: AddImageHandler.cpp  AddImageHandler.hpp  CMakeLists.txt  DeleteImageHandler.cpp  DeleteImageHandler.hpp  DeleteInventoryHandler.cpp  DeleteInventoryHandler.hpp  EditFoodHandler.cpp  EditFoodHandler.hpp  EditInventoryHandler.cpp  EditInventoryHandler.hpp  GetFoodBaseHandler.cpp  GetFoodBaseHandler.hpp  GetFoodDetailHandler.cpp  GetFoodDetailHandler.hpp  GetFoodItemHandler.cpp  GetFoodItemHandler.hpp  GetInventoryHandler.cpp  GetInventoryHandler.hpp  Handler.cpp  Handler.hpp  HandlerException.cpp  HandlerException.hpp  KeepAliveHandler.cpp  KeepAliveHandler.hpp  LoginHandler.cpp  LoginHandler.hpp  NullHandler.cpp  NullHandler.hpp  SetUserRatingHandler.cpp  SetUserRatingHandler.hpp
src/Server/Network/: BufferReader.cpp  BufferReader.hpp  BufferWriter.cpp  BufferWriter.hpp  CMakeLists.txt  MessageSender.cpp  MessageSender.hpp  ReadException.cpp  ReadException.hpp  Server.cpp  Server.hpp  ServerException.cpp  ServerException.hpp  WriteException.cpp  WriteException.hpp
src/Server/Protocol/: AddImageRequest.cpp  AddImageRequest.hpp  AddImageResponse.cpp  AddImageResponse.hpp  CMakeLists.txt  DeleteImageRequest.cpp  DeleteImageRequest.hpp  DeleteImageResponse.cpp  DeleteImageResponse.hpp  DeleteInventoryRequest.cpp  DeleteInventoryRequest.hpp  DeleteInventoryResponse.cpp  DeleteInventoryResponse.hpp  EditFoodRequest.cpp  EditFoodRequest.hpp  EditFoodResponse.cpp  EditFoodResponse.hpp  EditInventoryRequest.cpp  EditInventoryRequest.hpp  EditInventoryResponse.cpp  EditInventoryResponse.hpp  GetFoodBaseRequest.cpp  GetFoodBaseRequest.hpp  GetFoodBaseResponse.cpp  GetFoodBaseResponse.hpp  GetFoodDetailRequest.cpp  GetFoodDetailRequest.hpp  GetFoodDetailResponse.cpp  GetFoodDetailResponse.hpp  GetFoodItemRequest.cpp  GetFoodItemRequest.hpp  GetFoodItemResponse.cpp  GetFoodItemResponse.hpp  GetInventoryRequest.cpp  GetInventoryRequest.hpp  GetInventoryResponse.cpp  GetInventoryResponse.hpp  KeepAlive.cpp  KeepAlive.hpp  LoginRequest.cpp  (+9 more)
src/Server/Util/: Base64.cpp  Base64.hpp  CMakeLists.txt  Date.cpp  Date.hpp  Log.cpp  Log.hpp  Random.cpp  Random.hpp  SHA256.cpp  SHA256.hpp
src/TestClient/nbproject/: build-impl.xml  genfiles.properties  project.properties
src/TestClient/src/protocol/: Atomics.java  BufferReader.java  JSONReceiver.java  JSONSender.java  LoginRequest.java  LoginResponse.java  Message.java  MessageInitializer.java
src/TestClient/src/testclient/: Communicator.java  Connection.java  ConnectionListener.java  Connector.java  Instance.java  Main.java
src/WebClient/: index.php
(+460 files in other folders)
